[package]
name = "vey-resolver"
version = "0.9.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tokio-util = { workspace = true, features = ["time"] }
log.workspace = true
indexmap.workspace = true
ahash.workspace = true
arcstr.workspace = true
c-ares = { workspace = true, optional = true, features = ["build-cmake"] }
c-ares-resolver = { workspace = true, optional = true }
c-ares-sys = { workspace = true, optional = true } # for DEP_ version check
hickory-net = { workspace = true, optional = true, features = ["tokio"] }
hickory-proto = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
kanal = { workspace = true, optional = true, features = ["async"] }
async-recursion = { workspace = true, optional = true }
yaml-rust = { workspace = true, optional = true }
vey-types = { workspace = true, optional = true }
vey-socket = { workspace = true, optional = true }
vey-hickory-client = { workspace = true, optional = true }
vey-yaml = { workspace = true, optional = true }

[features]
default = []
yaml = ["dep:yaml-rust", "dep:vey-yaml"]
c-ares = ["dep:c-ares", "dep:c-ares-resolver", "dep:c-ares-sys"]
vendored-c-ares = ["c-ares", "c-ares-resolver/vendored", "c-ares/vendored"]
hickory = ["dep:hickory-net", "dep:hickory-proto", "dep:kanal", "dep:rustls", "dep:rustls-pki-types", "dep:async-recursion", "dep:vey-hickory-client", "vey-types/rustls", "dep:vey-socket", "vey-yaml?/rustls"]
quic = ["vey-types?/quic", "vey-hickory-client?/quic"]
