[package]
name = "vey-reuseport"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
libbpf-rs = { version = "0.26", default-features = false }
libc.workspace = true
log.workspace = true
zerocopy.workspace = true
socket2.workspace = true

[build-dependencies]
libbpf-cargo = { version = "0.26", default-features = false }