[package]
name = "vey-runtime"
version = "0.5.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "sync", "net"] }
yaml-rust = { workspace = true, optional = true }
vey-compat.workspace = true
vey-openssl = { workspace = true, optional = true }
vey-yaml = { workspace = true, optional = true, features = ["sched"] }

[features]
default = []
openssl-async-job = ["vey-openssl/async-job"]
yaml = ["dep:vey-yaml", "dep:yaml-rust"]
