[package]
name = "vey-socks"
version = "0.4.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
bytes.workspace = true
smallvec.workspace = true
zeroize.workspace = true
tokio = { workspace = true, features = ["sync", "io-util", "macros"] }
quinn = { workspace = true, optional = true, features = ["runtime-tokio"] }
vey-types.workspace = true
vey-io-ext.workspace = true
vey-io-sys.workspace = true

[features]
default = []
quic = ["dep:quinn", "tokio/time", "tokio/sync"]
