[package]
name = "vey-statsd-client"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa.workspace = true
zmij.workspace = true
smallvec.workspace = true
log.workspace = true
anyhow = { workspace = true, optional = true }
yaml-rust = { workspace = true, optional = true }
vey-io-sys.workspace = true
vey-types.workspace = true
vey-yaml = { workspace = true, optional = true }

[features]
default = []
yaml = ["dep:vey-yaml", "dep:yaml-rust", "dep:anyhow"]
