[package]
name = "vey-tls-cert"
version = "0.7.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
itertools.workspace = true
openssl.workspace = true
openssl-sys.workspace = true
libc.workspace = true
chrono = { workspace = true, features = ["clock"] }
vey-types.workspace = true
vey-datetime.workspace = true

[features]
default = []
