[package]
name = "vey-tls-ticket"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
rustc-hash.workspace = true
chrono = { workspace = true, features = ["now"] }
tokio = { workspace = true, features = ["rt", "time", "macros"] }
tokio-util = { workspace = true, features = ["time"] }
serde_json.workspace = true
yaml-rust = { workspace = true, optional = true }
redis = { workspace = true, features = ["aio", "tokio-comp"] }
vey-types = { workspace = true, features = ["openssl"] }
vey-json.workspace = true
vey-redis-client.workspace = true
vey-yaml = { workspace = true, optional = true }

[features]
default = []
yaml = ["vey-redis-client/yaml", "dep:vey-yaml", "dep:yaml-rust"]
