[package]
name = "vey-statsd-ctl"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "io-util", "fs"] }
g3-ctl.workspace = true
vey-statsd-proto = { path = "../../proto" }
